# sandbox-3d

./: Makefile  combile.sh  pyproject.toml  requirements.txt  setup.py
resources/: Config.prc  Config.windows.prc
resources/cursor/: white-circle.cur
sandbox/: app_sandbox.py  app_viewer.py  configgg.py  my_base.py  sim_init.py  world_maker.py
sandbox_core/: mesh_creation.py  switchable.py  switcher.py  transform.py  unique_id.py
sandbox_core/_utils/: coord_manager.py  mouse.py  screen.py
sandbox_core/assets/: audio.py  library.py
sandbox_core/camera/: camera.py  viewport.py
sandbox_core/controls/: axis_config.py  axis_system.py  follow.py  follow_system.py
sandbox_core/display/: display.py  display_system.py  geometry_model.py  model_provider.py  terrain_model.py
sandbox_core/entity/: entity.py  health.py  lifetime.py  living_system.py
sandbox_core/events/: event_config.py  event_system.py
sandbox_core/light/: light.py  light_system.py
sandbox_core/physics/: collisions.py  phys_system.py  ray_collision.py  rigid_body.py
sandbox_creature/behavior/: behavior.py  behavior_system.py  skeleton_physics.py
sandbox_creature/core/: anatomic.py  anchor.py  bone.py  cone_twist.py  joint.py  skeleton.py  skeleton_system.py  symmetry.py
sandbox_creature/gesture/: animation.py  file_gesture.py  gesture.py  gesture_loader.py  gesture_switcher.py  joint_sequence.py
sandbox_gui/: demo_scroll.py  gui_mapper.py  test_widget.py
sandbox_gui/base/: hover_handler.py  panel.py  panel_list.py  panel_system.py
sandbox_lib/: fog.py
sandbox_lib/rooms/: floor.py  (+4 more)
(+90 files in other folders)
